--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "vue": "^2.7.16",
     "vue-router": "3.0.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@types/node": "~18",
     "@vitejs/plugin-vue2": "^2.3.1",
     "typescript": "^5.2.2",
-    "vite": "^4.5.3",
+    "vite": "^6.0.4",
     "vue-template-compiler": "^2.7.16",
     "vue-tsc": "^2.0.17"
   }
